# assembler

./: .gitignore  CMakeLists.txt  README.md  assembler  assembler.c  consts.h  decode_table.c  decode_table.h  externals_table.h  factory.c  factory.h  first_run.c  first_run.h  labels_table.c  labels_table.h  makefile  makefile1  second_run.c  second_run.h  string_utils.c  string_utils.h
data_structures/linked_list/: list.c  list.h  types.h  utils.c  utils.h
data_structures/map/: map.c  map.h
data_structures/table/: types.h  utils.c  utils.h
data_types/: given_label.c  given_label.h  label.c  label.h  macro.c  macro.h
files/: utils.h
inputs/: h1-plus-macro.am  h1-plus-macro.as  h1-plus-macro.ent  h1-plus-macro.ext  h1-plus-macro.ob  h1.am  h1.as  h1.asm  h1.ent  h1.ext  h1.ob  h2.am  h2.as  h2.asm  h2.ob  h3.am  h3.asm  h3.ob  i1.am  i1.as  i1.asm  i1.err  i1.ob  i2.am  i2.as  i2.asm  i2.err  i2.ob  i3.am  i3.as  i3.err  i3.ob  i3.out1  i4.am  i4.as  i4.err  i5.am  i5.as  i5.err  i6.as  (+1 more)
instructions/: consts.h  types.h
labels_table/: utils.h
logs/: logging_utils.c  logging_utils.h
operands/: consts.h  parsers-consts.h  parsers.h  types.h
parsers/: line_utils.c  line_utils.h  parse_types.h  parsers_utils.c  parsers_utils.h  types.h  utils.c  utils.h
precompile/: precompile.c  precompile.h
precompile/macro/: macro_parser.c  macro_parser.h  macros.c  macros.h
precompile/precompile_list/: sorted_list.c  sorted_list.h
precomplie/: precompile.c  precompile.h  precompile_consts.h
precomplie/macro/: macro_parser.c  macro_parser.h  macros.c  macros.h
precomplie/precompile_list/: sorted_list.c
preprocessor/: input.txt  main.c  makefile
preprocessor/file_manger/: file_manger.c
preprocessor/helper/: helper.c  helper.h
preprocessor/precomplie/macro/: macro_parser.c  macros.c  macros.h
preprocessor/precomplie/precompile_list/: sorted_list.c  sorted_list.h
runs/: assembler.c  assembler.h  assembler_run.c  assembler_run.h  assembler_types.c  assembler_types.h  assembler_utils.c  assembler_utils.h  first_run.c  first_run.h  second_run.c  second_run.h
tables/: decode_table.c  decode_table.h  externals_table.c  externals_table.h  labels_table.c  labels_table.h  tables.c  tables.h
utils/: encoding.c  encoding.h  factory.c  factory.h  file_manager.c  file_manager.h  file_manger.c  file_manger.h  memory.c  memory.h  string_utils.c  string_utils.h  tokenize.c  tokenize.h
words/: consts.h  decoders.c  decoders.h  parsers.h  types.h
